--- a/.env.example
+++ b/.env.example
@@ -9,18 +9,18 @@ OPENAI_API_KEY=your_openai_api_key_here
 HUGGINGFACE_API_KEY=your_huggingface_key_here
 
 # OpenAI Configuration
-OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_MODEL=gpt-4.1-mini
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=150
 
 # Application Configuration
-APP_NAME=LLM Client Manager
+APP_NAME='LLM Client Manager'
 APP_VERSION=1.0.0
 DEBUG=false
 
 # Server Configuration
 HOST=0.0.0.0
-PORT=8000
+PORT=8010
 
 # Request Configuration
 REQUEST_TIMEOUT=30
